--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
           <!-- main sec -->
         <main class="flex">
-
+          <div class="nothing" v-if="allList.length <= 0 && userSearch != ''"><span>We didn't find anything, you're sure you wrote it right? Click on button 'Search' when you're ready</span></div>
           <div class="film-container shadow flex" v-for="element in allList" v-if="userSearch != ''">
             <div class="poster"> <img :src="imageNotAvailable(element.poster_path)" alt=""> </div>
             <div class="title"><span>Title: </span>{{element.title}}{{element.name}}</div>
