--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zxx" dir="ltr">
     <head>
         <meta charset="utf-8">
+        <link rel="icon" href="img/ico.png">
         <title>BoolFlix</title>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
