--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
               <input type="text" name="" value="" v-model="userSearch" placeholder="inizia a cercare film" v-on:keyup.13="searchAPI();searchAPItvSeries()">
               <button type="button" name="button" @click="searchAPI();searchAPItvSeries()" >Search Movies</button>
             </div>
+            <select class="" v-model="userSelect">
+              <option value="all">All</option>
+              <option :value="element.id" v-for="(element,index) in genresList">{{element.name}}</option>
+            </select>
             <ul class="flex">
               <li>KIDS</li>
               <li>DVD</li>
@@ -46,7 +50,7 @@
           <!-- main sec -->
         <main class="flex">
           <div class="nothing" v-if="allList.length <= 0 && userSearch != ''"><span>We didn't find anything, you're sure you wrote it right? Click on button 'Search' when you're ready</span></div>
-          <div class="film-container shadow flex" v-for="element in allList" v-if="userSearch != ''">
+          <div class="film-container shadow flex" v-for="element in allList" v-if="userSearch != '' || filterListByGenre(element)">
             <div class="poster"> <img :src="imageNotAvailable(element.poster_path)" alt=""> </div>
             <div class="title"><span>Title: </span>{{element.title}}{{element.name}}</div>
             <div class="original-title" v-if="element.original_title != ''"><span>Original Title: </span>{{element.original_title}}{{element.original_name}}</div>
