--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
             <span>Overview: </span>{{element.overview}}
             </div>
             <div class="language">
-              <img :src="'img/'+ langToFlag(element.original_language) +'.png'" alt="">{{element.original_language}} {{element.genre_ids[0]}}</div>
+              <img :src="'img/'+ langToFlag(element.original_language) +'.png'" alt="">{{element.original_language}}
+            <span v-for="genreId in element.genre_ids">{{convertGenre(genreId)}}</span>
+            </div>
           </div>
         </main>
           <!-- main sec -->
