--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <!-- main sec -->
         <main class="flex">
           <div class="nothing" v-if="allList.length <= 0"><span>We didn't find anything, you're sure you wrote it right? Click on button 'Search' when you're ready</span></div>
-          <div class="film-container shadow flex" v-for="element in allList" v-if="userSearch != '' || filterListByGenre(element) || userSelect == ''">
+          <div class="film-container shadow flex" v-for="element in allList" v-if="userSearch != '' || filterListByGenre(element) || userSelect == ''" @mouseenter="actorsbyID(element.id)">
             <div class="poster"> <img :src="imageNotAvailable(element.poster_path)" alt=""> </div>
             <div class="title"><span>Title: </span>{{element.title}}{{element.name}}</div>
             <div class="original-title" v-if="element.original_title != ''"><span>Original Title: </span>{{element.original_title}}{{element.original_name}}</div>
@@ -62,8 +62,10 @@
             </div>
             <div class="language">
               <img :src="'img/'+ langToFlag(element.original_language) +'.png'" alt="">Language: |{{element.original_language}}|
-              <span v-for="genreId in element.genre_ids">{{convertGenre(genreId)}}-</span>
-              <span >{{actorsbyID(element.id)}}</span>
+            </div>
+            <div class="misc">
+              <span v-for="genreId in element.genre_ids">{{convertGenre(genreId)}}-</span><br>
+              <span>With: {{actors}}</span>
             </div>
           </div>
         </main>
