--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           </div>
           <div class="navbar-menu2 flex">
             <div class="">
-              <input type="text" name="" value="" v-model="userSearch" placeholder="inizia a cercare film" v-on:keyup.13="searchAPI();searchAPItvSeries()">
+              <input type="text" name="" value="" v-model="userSearch" placeholder="inizia a cercare film" v-on:keyup.enter="searchAPI();searchAPItvSeries()">
               <button type="button" name="button" @click="searchAPI();searchAPItvSeries()" >Search Movies</button>
             </div>
             <select class="select" v-model="userSelect" @click="userSearch = '';">
