--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
           </div>
           <div class="navbar-menu2 flex">
             <div class="">
-              <input type="text" name="" value="" v-model="userSearch" placeholder="inizia a cercare film" v-on:keyup.enter="searchAPI();searchAPItvSeries()">
-              <button type="button" name="button" @click="searchAPI();searchAPItvSeries()" >Search Movies</button>
+              <input type="text" name="" value="" v-model="userSearch" placeholder="inizia a cercare film" v-on:keyup.enter="searchAPI();searchAPItvSeries();setFirst(allList[0]);">
+              <button type="button" name="button" @click="searchAPI();searchAPItvSeries();setFirst(allList[0]);" >Search Movies</button>
             </div>
             <select class="select" v-model="userSelect" @click="userSearch = '';">
               <option value="">All</option>
@@ -54,18 +54,17 @@
 
           <!-- main sec -->
         <main class="flex">
-          <div class="first-sight flex" v-if="userSearch == ''">
-          <div class="copertina flex">
-          <img :src="imageNotAvailable(firstElement.poster_path)" alt="">
-          <div class="misc">
-            <div class="coverTitle">{{firstElement.title}}{{firstElement.name}}</div>
-            <div class="coverOverview">{{firstElement.overview}}</div>
-            <div class="coverLanguage">
-              <img :src="'img/'+ langToFlag(firstElement.original_language) +'.png'" alt="">Language: |{{firstElement.original_language}}|
+          <div class="copertina flex" v-if="userSearch == '' || allList.length > 0">
+            <img :src="imageNotAvailable(firstElement.poster_path)" alt="">
+            <div class="misc">
+              <div class="coverTitle">{{firstElement.title}}{{firstElement.name}}</div>
+              <div class="coverOverview">{{firstElement.overview}}</div>
+              <div class="coverLanguage">
+                <img :src="'img/'+ langToFlag(firstElement.original_language) +'.png'" alt="">Language: |{{firstElement.original_language}}|
+              </div>
             </div>
-
           </div>
-          </div>
+          <div class="first-sight flex" v-if="userSearch == ''">
           <div class="titleone flex">
           <h2 class="white">Popoular Series </h2>
           </div>
@@ -79,8 +78,8 @@
           <div class="poster"> <img :src="imageNotAvailable(element.poster_path)" alt=""> </div>
           </div>
         </div>
-          <div class="nothing" v-if="allList.length <= 0"><span class="white">We didn't find anything, you're sure you wrote it right? Click on button 'Search' when you're ready</span></div>
-          <div class="film-container shadow flex white" v-for="element in changeModel()" v-if="userSearch != '' || filterListByGenre(element) || userSelect == ''" @mouseenter="actorsbyID(element.id)">
+          <div class="nothing" v-if="allList.length <= 0"><span class="white">We didn't find anything more, you're sure you wrote it right? Click on button 'Search' when you're ready</span></div>
+          <div class="film-container shadow flex white" v-for="element in changeModel()" v-if="userSearch != '' || filterListByGenre(element) || userSelect == ''" @mouseenter="actorsbyID(element.id)" @click="setFirst(element)">
             <div class="poster"> <img :src="imageNotAvailable(element.poster_path)" alt=""> </div>
             <div class="title"><span>Title: </span>{{element.title}}{{element.name}}</div>
             <div class="original-title" v-if="element.original_title != ''"><span>Original Title: </span>{{element.original_title}}{{element.original_name}}</div>
